cargo-features = ["profile-rustflags"]

[package]
name = "bmp180-final"
version = "0.1.0"
authors = ["Moratelli <crmoratelli@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"


[[bin]]
name = "bmp180-final"
test = false
bench = false

[dependencies]
panic-halt = "0.2.0"
ufmt = "0.2.0"
nb = "0.1.2"
ufmt_float = "0.2.0"
embedded-hal = "0.2.7"
avr-device = "0.5.4"

[dependencies.arduino-hal]
git = "https://github.com/rahix/avr-hal"
rev = "45a37eb746d264166c3ea382fed323a204104998"
features = ["arduino-mega2560"]

# Configure the build for minimal size - AVRs have very little program memory
[profile.dev]
panic = "abort"
lto = true
opt-level = "s"

[profile.release]
panic = "abort"
codegen-units = 1
debug = true
lto = true
opt-level = "s"
rustflags = ["-C", "link-arg=-Wl,--allow-multiple-definition"]

[profile.dev.package.compiler_builtins]
overflow-checks = false
